--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,8 +7,14 @@
         <h1>Bienvenido</h1>
         <form action="/" method="post">
                 <input type="text" placeholder="Usuario" name="username">
-                <input type="text" placeholder="Contraseña" name="password">
+                <input type="password" placeholder="Contraseña" name="password">
                 <button type="submit">Ingresar</button>
+        </form>
+        <h1>Registrarse</h1>
+        <form action="/register" method="post">
+            <input type="text" placeholder="Usuario" name="regusername">
+            <input type="password" placeholder="Contraseña" name="regpassword">
+            <button type="submit">Registrarse</button>
         </form>
     </body>
 </html>
