--- a/app/views/map.html
+++ b/app/views/map.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <h3>My Google Maps Demo</h3>
+    <a href="/logout">Logout</a>
     <!--The div element for the map -->
     <div id="map"></div>
     <script>
@@ -48,7 +49,6 @@ function success(pos) {
   time = new Date();
 
   eventData = {
-    username: 'andres',
     location: location,
     time: time.toISOString()
   };
