Made it so that entering the main website while logged in will redirect you to the map

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,6 +21,11 @@
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
         <script>
+var token = window.localStorage.getItem('token');
+if (token) {
+    window.location.href = '/map';
+}
+
 $('#loginForm').submit(function(event) {
     $.ajax({
         url: '/login',
